add perl 5 raptor favicon

--- a/README.pod
+++ b/README.pod
@@ -11,3 +11,7 @@ This software is Copyright (c) 2017 by Dan Book <dbook@cpan.org>.
 This is free software, licensed under:
 
   The Artistic License 2.0 (GPL Compatible)
+
+Bundled Perl 5 Raptor Copyright (c) 2012, Sebastian Riedel.
+
+Licensed under the CC-SA License, Version 4.0 L<http://creativecommons.org/licenses/by-sa/4.0>.
