--- a/README.pod
+++ b/README.pod
@@ -9,17 +9,18 @@ CPAN Meta Browser
 =head1 DESCRIPTION
 
 CPAN Meta Browser is a two-part application for convenient access to metadata
-for CPAN (Comprehensive Perl Archive Network). The first part is a C<refresh>
-command which will download this metadata and index it into the selected
-backend database. The second part is a web application which provides search
-functionality into the indexed database.
+for the CPAN (Comprehensive Perl Archive Network). The first part is a
+C<refresh> command which will download this metadata and index it into the
+selected backend database. The second part is a web application which provides
+search functionality into the indexed database.
 
   /path/to/cpan-meta-browser.pl refresh
   hypnotoad /path/to/cpan-meta-browser.pl
 
 =head1 INSTALLATION
 
-Perl dependencies are listed in F<cpanfile>. They can be installed by running:
+Perl v5.20.0 or higher is required. Perl dependencies are listed in
+F<cpanfile>. They can be installed by running:
 
   cpanm --installdeps .
 
