describe function of search pages

--- a/README.pod
+++ b/README.pod
@@ -17,6 +17,27 @@ search functionality into the indexed database.
   /path/to/cpan-meta-browser.pl refresh
   hypnotoad /path/to/cpan-meta-browser.pl
 
+The C<Module Index Search> searches the CPAN packages index, which is the file
+L<02packages.details.txt|https://cpan.metacpan.org/modules/02packages.details.txt>.
+This is the canonical mapping of module name to the latest authorized stable
+release of that module, maintained by PAUSE and used by CPAN installers when
+given a module to install.
+
+The C<Permissions Search> searches the PAUSE permissions database, which is the
+file L<06perms.txt|https://cpan.metacpan.org/modules/06perms.txt>. This is the
+listing of authors that can upload new stable releases of a module and have it
+indexed, and that can modify the permissions for that module name. The
+C<first-come> permission has ultimate authority on the name, and can add or
+remove any other user's permissions. The C<permission manager> permission can
+add or remove other user's permissions other than C<first-come>. The
+C<co-maint> permission can only remove their own permission. Note that these
+module permissions are B<not> hierarchical. An author must have permissions for
+each individual module name they wish to have indexed.
+
+The C<Author Search> searches the CPAN authors database, which is the file
+L<00whois.xml|https://cpan.metacpan.org/authors/00whois.xml>. This contains
+public details of the PAUSE accounts.
+
 =head1 INSTALLATION
 
 Perl v5.20.0 or higher is required. Perl dependencies are listed in
